--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -34,7 +34,7 @@ jobs:
         run: uv sync --locked --all-extras --dev
 
       - name: Build
-        run: source ./scripts/publish.sh
+        run: source ./scripts/build.sh
 
       - name: Publish
         uses: pypa/gh-action-pypi-publish@release/v1
